--- a/module/ExchangeRates/view/exchange-rates/currency/currency.phtml
+++ b/module/ExchangeRates/view/exchange-rates/currency/currency.phtml
@@ -2,8 +2,20 @@
 <strong>Controller:</strong>    Currency &raquo;
 <strong>Action:</strong>        currency
 
+<script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+<script src="https://www.amcharts.com/lib/3/serial.js"></script>
+<script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
+<link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
+<script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
+
 <?php
 $description = "$name ($currencycode)";
 $this->headTitle($description);
 ?>
 <h1><?=$description?></h1>
+<div id="chartdiv" style="width: 100%; height: 500px;"></div>
+<script>
+jsonData = <?= $jsondata ?>;
+dataProvider = jsonData.chart;
+</script>
+<script src="/js/chart.js"></script>
